# goal-path

./: .gitignore  API_BACKEND_TESTING_COMPLETE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile  GITHUB_ACTIONS_ENHANCEMENT_SUMMARY.md  GoalPath-Implementation-Checklist.md  GoalPath-Implementation.md  HTMX_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PROJECT_FINAL_SUMMARY.md  PR_DESCRIPTION.md  PUPPETEER_TESTING_RESULTS.md  ProjectKnowledge_Updated.md  README.md  README_MCP.md  ROADMAP.md  UI_SCREENSHOTS.md  check_db_schema.py  comprehensive_test_suite.py  create-pr.sh  create_epics_milestones.py  database-schema-design.md  debug_db_path.py  debug_path.py  debug_sqlalchemy.py  goalpath_db_schema.mermaid  mcp_server.py  pyproject.toml  pytest-ui.ini  requirements-mcp.txt  requirements.txt  run-ui-tests.sh  test_comprehensive.py  test_database_apis.py  (+12 more)
.github/workflows/: ci.yml  environment-check.yml  security.yml
backup/workflows/: cd.yml  ci.yml  security.yml
database/: README.md  init_db.py  sample_data.sql  schema.sql  schema_complete.sql  schema_part2.sql  test_schema.py  useful_queries.sql
docs/: CICD_SETUP.md
nomad/: production.nomad  staging.nomad
scripts/github-cli/: README.md  check-actions-status.sh  monitor-workflows.sh  setup-gh-cli.sh  simulate-ci.sh  validate-workflows.sh
scripts/nomad/: deploy.sh  status.sh
scripts/runner-setup/: setup-runner.sh
scripts/testing/: comprehensive_test_suite.py  final_validation.py  test_api.py  test_comprehensive.py  test_database_apis.py  test_htmx_implementation.py  test_integration.py  test_mock_apis.py  test_project_detail_route.py  test_sqlalchemy.py  test_structure.py
src/goalpath/: __init__.py  database.py  db_utils.py  htmx_utils.py  init_db.py  main.py  schemas.py  services.py
src/goalpath/models/: __init__.py  epics.py  extended.py
src/goalpath/routers/: __init__.py  epics.py  goals.py  htmx_epics.py  htmx_goals.py  htmx_milestones.py  htmx_projects.py  htmx_projects_simple.py  htmx_tasks.py  issues.py  milestones.py  projects.py  tasks.py
src/goalpath/services/: __init__.py  base_service.py  goal_service.py  issue_service.py  project_service.py  task_service.py
src/goalpath/templates/: analytics.html  base.html  dashboard.html  goals.html  project_detail.html  projects.html  task_detail.html  tasks.html
src/goalpath/templates/epics/: list.html
src/goalpath/templates/fragments/: analytics_content.html  dashboard_content.html  dashboard_stats.html  empty.html  epic_card.html  epic_list.html  epics_content.html  error.html  error_message.html  goal_card.html  goal_list.html  goals_content.html  milestone_card.html  milestone_cards.html  milestone_edit_form.html  milestone_progress.html  milestone_stats.html  milestone_success.html  milestone_timeline.html  project_card.html  project_detail_content.html  projects_content.html  projects_list.html  task_detail_content.html  task_item.html  tasks_content.html  tasks_list.html
src/goalpath/templates/issues/: list.html
src/goalpath/templates/milestones/: list.html
src/goalpath/templates/modals/: create_epic.html  create_goal.html  create_milestone.html  create_project.html  create_task.html
tests/: __init__.py  conftest.py  test_database_integration.py  test_db_utils.py  test_init_db.py  test_models.py  test_projects_api.py
tests/ui/: conftest.py  page_objects.py  test_crud_operations.py  test_htmx_interactions.py  test_milestone_functionality.py  test_smoke.py  test_ui_flows.py
